force-app/main/default/objects/Ext_ACC__c/Ext_ACC__c.object-meta.xml
<CustomObject>
    <description>External accounts</description>
    <label>Ext_ACC</label>
    <nameField>
        <label>Ext_ACC Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ext_ACCs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>