force-app/main/default/objects/Ext_ACC__c/fields/CIF__c.field-meta.xml
<CustomField>
    <fullName>CIF__c</fullName>
    <description>CIF</description>
    <inlineHelpText>CIF</inlineHelpText>
    <label>CIF</label>
    <length>9</length>
    <type>Text</type>
</CustomField>