force-app/main/default/objects/Ext_ACC__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <description>Validation error</description>
    <inlineHelpText>Validation error</inlineHelpText>
    <label>Error</label>
    <length>40</length>
    <type>Text</type>
</CustomField>