force-app/main/default/objects/Ext_ACC__c/fields/ExtID_ACC__c.field-meta.xml
<CustomField>
    <fullName>ExtID_ACC__c</fullName>
    <description>External ID Account</description>
    <externalId>true</externalId>
    <inlineHelpText>External ID Account</inlineHelpText>
    <label>ExtID_ACC</label>
    <type>AutoNumber</type>
</CustomField>