force-app/main/default/objects/Ext_ACC__c/fields/ExtID_Con__c.field-meta.xml
<CustomField>
    <fullName>ExtID_Con__c</fullName>
    <description>External ID Contact</description>
    <externalId>true</externalId>
    <inlineHelpText>External ID Contac</inlineHelpText>
    <label>ExtID_Con</label>
    <type>AutoNumber</type>
</CustomField>