force-app/main/default/objects/Ext_ACC__c/fields/IBAN__c.field-meta.xml
<CustomField>
    <fullName>IBAN__c</fullName>
    <description>IBAN</description>
    <inlineHelpText>IBAN</inlineHelpText>
    <label>IBAN</label>
    <length>22</length>
    <type>Text</type>
</CustomField>