force-app/main/default/objects/Ext_ACC__c/fields/Last_Execution__c.field-meta.xml
<CustomField>
    <fullName>Last_Execution__c</fullName>
    <description>Last Execution</description>
    <inlineHelpText>Last Execution</inlineHelpText>
    <label>Last Execution</label>
    <type>DateTime</type>
</CustomField>