force-app/main/default/objects/Ext_ACC__c/fields/Success_Date__c.field-meta.xml
<CustomField>
    <fullName>Success_Date__c</fullName>
    <description>Success date</description>
    <inlineHelpText>Success date</inlineHelpText>
    <label>Success Date</label>
    <type>DateTime</type>
</CustomField>